recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:8: error: identifier expected but ')' found.
    droite(90.)
              ^