recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  carre()
}

def carre() {
  for (i <-0 to 4){
    avance(100)
    droite(90.)
  }
}